// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should mark the input as invalid 1`] = `
<div>
  <EuiTitle
    size="s"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Step 1 of 2: Define index pattern"
        id="kbn.management.createIndexPattern.stepHeader"
        values={Object {}}
      />
    </h2>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiForm
        isInvalid={true}
      >
        <EuiFormRow
          describedByIds={Array []}
          display="row"
          error={
            Array [
              "Input is invalid",
            ]
          }
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText={
            <div>
              <p>
                <FormattedMessage
                  defaultMessage="You can use a {asterisk} as a wildcard in your index pattern."
                  id="kbn.management.createIndexPattern.step.indexPattern.allowLabel"
                  values={
                    Object {
                      "asterisk": <strong>
                        *
                      </strong>,
                    }
                  }
                />
              </p>
              <p>
                <FormattedMessage
                  defaultMessage="You can't use spaces or the characters {characterList}."
                  id="kbn.management.createIndexPattern.step.indexPattern.disallowLabel"
                  values={
                    Object {
                      "characterList": <strong>
                        %
                      </strong>,
                    }
                  }
                />
              </p>
            </div>
          }
          isInvalid={true}
          label={
            <FormattedMessage
              defaultMessage="Index pattern"
              id="kbn.management.createIndexPattern.step.indexPatternLabel"
              values={Object {}}
            />
          }
          labelType="label"
        >
          <EuiFieldText
            data-test-subj="createIndexPatternNameInput"
            isInvalid={true}
            name="indexPattern"
            onChange={[Function]}
            placeholder="index-name-*"
            value="%"
          />
        </EuiFormRow>
      </EuiForm>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="createIndexPatternGoToStep2Button"
        iconType="arrowRight"
        isDisabled={true}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Next step"
          id="kbn.management.createIndexPattern.step.nextStepButton"
          values={Object {}}
        />
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`Header should render normally 1`] = `
<div>
  <EuiTitle
    size="s"
  >
    <h2>
      <FormattedMessage
        defaultMessage="Step 1 of 2: Define index pattern"
        id="kbn.management.createIndexPattern.stepHeader"
        values={Object {}}
      />
    </h2>
  </EuiTitle>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiForm
        isInvalid={false}
      >
        <EuiFormRow
          describedByIds={Array []}
          display="row"
          error={Array []}
          fullWidth={false}
          hasChildLabel={true}
          hasEmptyLabelSpace={false}
          helpText={
            <div>
              <p>
                <FormattedMessage
                  defaultMessage="You can use a {asterisk} as a wildcard in your index pattern."
                  id="kbn.management.createIndexPattern.step.indexPattern.allowLabel"
                  values={
                    Object {
                      "asterisk": <strong>
                        *
                      </strong>,
                    }
                  }
                />
              </p>
              <p>
                <FormattedMessage
                  defaultMessage="You can't use spaces or the characters {characterList}."
                  id="kbn.management.createIndexPattern.step.indexPattern.disallowLabel"
                  values={
                    Object {
                      "characterList": <strong>
                        %
                      </strong>,
                    }
                  }
                />
              </p>
            </div>
          }
          isInvalid={false}
          label={
            <FormattedMessage
              defaultMessage="Index pattern"
              id="kbn.management.createIndexPattern.step.indexPatternLabel"
              values={Object {}}
            />
          }
          labelType="label"
        >
          <EuiFieldText
            data-test-subj="createIndexPatternNameInput"
            isInvalid={false}
            name="indexPattern"
            onChange={[Function]}
            placeholder="index-name-*"
            value="k"
          />
        </EuiFormRow>
      </EuiForm>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiButton
        data-test-subj="createIndexPatternGoToStep2Button"
        iconType="arrowRight"
        isDisabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Next step"
          id="kbn.management.createIndexPattern.step.nextStepButton"
          values={Object {}}
        />
      </EuiButton>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;
